# state-space-rs

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
.venv-baseline/: pyvenv.cfg
crates/state-space-core/: Cargo.toml
crates/state-space-core/src/: distributions.rs  lib.rs  linear_algebra.rs  parameter_set.rs  state_space_model.rs  state_space_model.rs.bak
examples/: airline_forecast.py  python_visualization.py
src/: lib.rs
tests/: test_state_space_rs.py  test_statsmodels_comparison.py
